# liverpool_csck700_capstone_project

./: Makefile  README.md  environment.yml  pyproject.toml
data/processed/: 3DF53200  64663200  ALL_MAPPINGS_02.xlsx  CF229100  F253F100  all_mappings.xlsx  bsdd_collecting.xlsx  bsdd_collecting3.xlsx  bsdd_collecting4.xlsx
data/raw/: 1111.xlsx  1E26A100  648DF100  91D35600  D5E50200  E8F22700  authoring.xlsx  ufgs_authoring.xlsx  ufgs_authoring_02.ods
docs/: mkdocs.yml
docs/docs/: index.md
graphs/: liverpool_csck700_capstone_project.txt
graphs/Graph_20251010/: graph-export.csv  node-export.csv  relationship-export.csv
graphs/Graph_20251015/: graph-export.csv  node-export.csv  relationship-export.csv
liverpool_csck700_capstone_project/: __init__.py  dataset.py  features.py  plots.py
liverpool_csck700_capstone_project/modeling/: predict.py  train.py
notebooks/: bsdd_cache.json  csck700_1_2_ifc_parser.ipynb  csck700_3_bsdd_api.ipynb  csck700_4_graph_enrichment.ipynb  csck700_bsdd_enrichment.ipynb  csck700_ifc_parser.ipynb
notebooks/_archives/: csck700_bsdd_enrichment20250930.ipynb  csck700_bsdd_enrichment20251001.ipynb  csck700_ifc_parser_20250904.html  csck700_ifc_parser_2025090501.html  (+2 more)
references/: .$graph_enrichment_layer.drawio.bkp  .$graph_enrichment_layer_02.drawio.bkp  .$graph_enrichment_workflow.drawio.bkp  graph_enrichment_layer.drawio  graph_enrichment_ufgs_technical_parameters.ods  graph_enrichment_ufgs_technical_parameters_20250925.ods  graph_enrichment_ufgs_technical_parameters_20250927.ods  graph_enrichment_workflow.drawio
(+5 files in other folders)
