[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "liverpool_csck700_capstone_project"
version = "0.0.1"
description = "University of Liverpool MSc Master in Data Sicence and AI, final Capstone Project"
authors = [
  { name = "Benoit Loze" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["liverpool_csck700_capstone_project"]
include = ["pyproject.toml", "liverpool_csck700_capstone_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["liverpool_csck700_capstone_project"]
force-sort-within-sections = true

